--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-dsa
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Assignment Solution for Module 2</title>
+    <link rel="stylesheet" href="main.css">
+  </head>
+<body>
+
+<h1>Our Menu</h1>
+
+<div class="block">
+  <div class="dtp tab mob">
+    <div class='bblock'>
+      <div class='sblock'>Chicken</div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
+    </div>
+  </div>
+  <div class="dtp tab mob">
+    <div class='bblock'>
+      <div class='sblock'>Pizza</div>
+       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
+    </div>
+  </div>
+  <div class="dtp tab mob">
+    <div class='bblock lasttab'>
+      <div class='sblock'>Pasta</div>
+       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
